Commented riverswim code and added library for tex

--- a/Home assignment 2/OReL HA2 Davide Marchi.tex
+++ b/Home assignment 2/OReL HA2 Davide Marchi.tex
@@ -5,6 +5,7 @@
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage{lipsum}
+\usepackage{booktabs}
 
 \usepackage{graphicx}  % For including images
 \usepackage{xcolor}  % For a colorfull presentation
@@ -63,6 +64,7 @@
 \input{2.tex}
 
 \section{Policy Evaluation in RiverSwim}
+\input{3.tex}
 
 \section{Solving a Discounted Grid-World}
 
