Maybe finished exercise 4

--- a/Home assignment 2/OReL HA2 Davide Marchi.tex
+++ b/Home assignment 2/OReL HA2 Davide Marchi.tex
@@ -6,6 +6,7 @@
 \usepackage{amssymb}
 \usepackage{lipsum}
 \usepackage{booktabs}
+\usepackage{enumitem}
 
 \usepackage{graphicx}  % For including images
 \usepackage{xcolor}  % For a colorfull presentation
@@ -67,6 +68,7 @@
 \input{3.tex}
 
 \section{Solving a Discounted Grid-World}
+\input{4.tex}
 
 \section{Off-Policy Evaluation in Episode-Based River-Swim}
 
